--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <div class="container-fluid">
                         <!-- Logo -->
                         <a class="navbar-brand" href="#">
-                            <img src="/Image/logo.png" alt="Logo" height="50px" width="150px">
+                            <img src="Image/logo.png" alt="Logo" height="50px" width="150px">
                         </a>
                         <!-- Toggle button for mobile view -->
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
