--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>E-Library</title>
     <style>
          .div-second {
-            background-image: url('/Image/library.jpg'); /* Use the correct path to your image */
+            background-image: url('Image/library.jpg'); /* Use the correct path to your image */
             background-size: cover;
             background-position: center; /* Center the image */
             height: 100vh; /* Full viewport height for demonstration */
