--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                     <td>Content Providers</td>
                                 </tr>
                                 <tr>
-                                    <td><a href="/Books/schooledu.html">Explore More Contents</a></td>
+                                    <td><a href="Books/schooledu.html">Explore More Contents</a></td>
                                 </tr>
                             </table>
                         </section>
@@ -135,7 +135,7 @@
                                     <td>Educational Levels</td>
                                 </tr>
                                 <tr>
-                                    <td><a href="/Books/heducaation.html">Explore More Contents</a></td>
+                                    <td><a href="Books/heducaation.html">Explore More Contents</a></td>
                                 </tr>
                             </table>
                         </section>
@@ -159,7 +159,7 @@
                                     <td>Journals</td>
                                 </tr>
                                 <tr>
-                                    <td><a href="/Books/research.html">Explore More Contents</a></td>
+                                    <td><a href="Books/research.html">Explore More Contents</a></td>
                                 </tr>
                             </table>
                         </section>
@@ -177,7 +177,7 @@
                                     <td>Resource Types</td>
                                 </tr>
                                 <tr>
-                                    <td><a href="/Books/gamedev.html">Explore More Contents</a></td>
+                                    <td><a href="Books/gamedev.html">Explore More Contents</a></td>
                                 </tr>
                             </table>
                         </section>
@@ -195,7 +195,7 @@
                                     <td>Resource Types</td>
                                 </tr>
                                 <tr>
-                                    <td><a href="/Books/cultural.html">Explore More Contents</a></td>
+                                    <td><a href="Books/cultural.html">Explore More Contents</a></td>
                                 </tr>
                             </table>
                         </section>
@@ -213,7 +213,7 @@
                                     <td>Newspapers</td>
                                 </tr>
                                 <tr>
-                                    <td><a href="/Books/newspaper.html">Explore More Contents</a></td>
+                                    <td><a href="Books/newspaper.html">Explore More Contents</a></td>
                                 </tr>
                             </table>
                         </section>
